<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="tts">Text-to-Speech</string>
    <string name="app_name">Audio Alert</string>
    <string name="menu_settings">Settings</string>
    <string name="mic_desc">Mic</string>
    <string name="mic_status">Microphone Status</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="sleep_status">Prevent Sleep Status</string>
    <string name="mic_image">Microphone</string>
    <string name="settings_text">Settings</string>
    <string name="test_button_text">De-Activate Alert</string>
    <string name="emergency_contact">Emergency Contacts: </string>
    <string name="camera_flash">Camera Flash on Alert</string>
    <string name="vibrate">Vibrate on Alert</string>
    <string name="txt_message">Text Emergency Contacts on Alert</string>
    <string name="screen_flash">Screen Flash on Alert</string>
    <string name="notifications">Notifications</string>
    <string name="settings_header">Alert Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="remove">Remove</string>
    <string name="phone_hint">Phone</string>
    <string name="help_title">Help</string>
    <string name="save_button">Save</string>
    <string name="timer">Alarm Delay Timer(Seconds)</string>
    <string name="help_text">-----------\nMain Screen\n-----------\nClick to Activate Alert - Tests the alerts enabled in the settings menu.\nMicrophone Status - Toggles the audio recording on or off.\nEmergency Contacts - A listing of phone numbers to send text messages to, given that "Text Emergency Contacts on Alert" in the Settings menu is enabled. Phone numbers can be added by pressing the "Add Contact" button.\n\n-------------\nSettings Menu\n-------------\nManages the different alerts that are triggered when an audible threat is detected:\n- Camera Flash on Alert: Blinks the camera light.\n- Vibrate on Alert: Operates the phone\'s vibration module.\n- Text Emergency Contacts on Alert: Sends text messages to all emergency contacts.\n- Screen Flash on Alert: Blinks the main screen background color.\n- Notification: Sends a message to the Android status bar.\n</string>
</resources>